Minor changes in first tutorial

--- a/LangChain-Tutorial/01-basics-simple-LLM-app-LCEL.ipynb
+++ b/LangChain-Tutorial/01-basics-simple-LLM-app-LCEL.ipynb
@@ -17,31 +17,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load environment variables and create LLAMA2 model instance\n",
+    "# Load environment variables and create LLAMA3.1 model instance\n",
     "from dotenv import load_dotenv\n",
     "from langchain_community.chat_models import ChatOllama\n",
     "\n",
     "load_dotenv()\n",
     "\n",
-    "model = ChatOllama(model=\"llama2\")"
+    "model = ChatOllama(model=\"llama3.1\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "AIMessage(content='\\nCiao!', response_metadata={'model': 'llama2', 'created_at': '2024-07-15T08:02:25.3010567Z', 'message': {'role': 'assistant', 'content': ''}, 'done_reason': 'stop', 'done': True, 'total_duration': 3266497500, 'load_duration': 20996200, 'prompt_eval_count': 30, 'prompt_eval_duration': 2023174000, 'eval_count': 5, 'eval_duration': 1218035000}, id='run-9d4584ac-7d5c-4a8d-a09d-89da230b2652-0')"
+       "AIMessage(content='Ciao!', response_metadata={'model': 'llama3.1', 'created_at': '2024-08-13T13:56:43.0013508Z', 'message': {'role': 'assistant', 'content': ''}, 'done_reason': 'stop', 'done': True, 'total_duration': 1571163000, 'load_duration': 82557300, 'prompt_eval_count': 24, 'prompt_eval_duration': 431807000, 'eval_count': 4, 'eval_duration': 1050718000}, id='run-77ceca78-b69f-4724-97f3-16a825aca0cc-0')"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -93,7 +93,7 @@
     {
      "data": {
       "text/plain": [
-       "'Ciao!'"
+       "'Ciao! Come posso aiutarti?'"
       ]
      },
      "execution_count": 9,
@@ -165,16 +165,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'\\nこんにちは (Konnichiwa)'"
+       "'Konnichiwa! (Hello!)'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,16 +187,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Italian: Ciao'"
+       "'\"Ciao\" (CHOW) in Italian. \\n\\nHowever, if you\\'re referring to a more casual greeting, it would be \"Ciaooo!\" or simply \"Hey!\" which is often translated as \"Ehi!\" in informal contexts.\\n\\nIf you want the translation of \"hi\" in a way that\\'s more polite and formal, you\\'d use \"Buongiorno!\" (BWOHN-jhor-noh) during the day and \"Buona sera!\" (BWOH-nah SEH-rah) in the evening.'"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
