Change : Build Chatbot model from Llama to Gemini

--- a/LangChain-Tutorial/01-basics-simple-LLM-app-LCEL.ipynb
+++ b/LangChain-Tutorial/01-basics-simple-LLM-app-LCEL.ipynb
@@ -21,7 +21,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load environment variables and create LLAMA3.1 model instance\n",
+    "# Load environment variables and create Gemini model instance\n",
     "from dotenv import load_dotenv\n",
     "from langchain_google_genai import ChatGoogleGenerativeAI\n",
     "\n",
