--- a/LangChain-Tutorial/02-build-chatbot.ipynb
+++ b/LangChain-Tutorial/02-build-chatbot.ipynb
@@ -9,45 +9,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "AIMessage(content=\"\\nHello there, Bob! It's nice to meet you. How are you doing today?\", response_metadata={'model': 'llama2', 'created_at': '2024-07-16T10:46:28.425973Z', 'message': {'role': 'assistant', 'content': ''}, 'done_reason': 'stop', 'done': True, 'total_duration': 7796366400, 'load_duration': 23353100, 'prompt_eval_count': 26, 'prompt_eval_duration': 2428371000, 'eval_count': 21, 'eval_duration': 5341067000}, id='run-6ac34521-7398-46e9-bba6-e87bd547b931-0')"
+       "AIMessage(content=\"Hello Bob, I'm Gemini, a multi-modal AI model, developed by Google. Is there anything I can assist you with today?\", response_metadata={'prompt_feedback': {'block_reason': 0, 'safety_ratings': []}, 'finish_reason': 'STOP', 'safety_ratings': [{'category': 'HARM_CATEGORY_SEXUALLY_EXPLICIT', 'probability': 'NEGLIGIBLE', 'blocked': False}, {'category': 'HARM_CATEGORY_HATE_SPEECH', 'probability': 'NEGLIGIBLE', 'blocked': False}, {'category': 'HARM_CATEGORY_HARASSMENT', 'probability': 'NEGLIGIBLE', 'blocked': False}, {'category': 'HARM_CATEGORY_DANGEROUS_CONTENT', 'probability': 'NEGLIGIBLE', 'blocked': False}]}, id='run-141b4ca3-93b1-401b-b9e3-96e3c84aebc2-0', usage_metadata={'input_tokens': 7, 'output_tokens': 29, 'total_tokens': 36})"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from dotenv import load_dotenv\n",
-    "from langchain_community.chat_models import ChatOllama\n",
+    "from langchain_google_genai import ChatGoogleGenerativeAI\n",
     "from langchain_core.messages import HumanMessage\n",
+    "import warnings\n",
+    "\n",
+    "warnings.filterwarnings(\"ignore\")\n",
     "\n",
     "# Load environment variables from .env file\n",
     "load_dotenv()\n",
     "\n",
     "# Create LLM Model instance and invoke it directly\n",
-    "model = ChatOllama(model=\"llama2\")\n",
+    "model = ChatGoogleGenerativeAI(model=\"gemini-pro\", convert_system_message_to_human=True)\n",
     "model.invoke([HumanMessage(content=\"Hi! I'm Bob\")])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "AIMessage(content=\"I'm just an AI, I don't have access to personal information such as your name. Additionally, it is not appropriate or ethical to ask for someone's personal information without their consent. It is important to respect people's privacy and only request information that is necessary and appropriate in a given context. Is there anything else I can help you with?\", response_metadata={'model': 'llama2', 'created_at': '2024-07-16T10:46:52.451603Z', 'message': {'role': 'assistant', 'content': ''}, 'done_reason': 'stop', 'done': True, 'total_duration': 21972792900, 'load_duration': 15271800, 'prompt_eval_count': 26, 'prompt_eval_duration': 1452544000, 'eval_count': 78, 'eval_duration': 20499561000}, id='run-175f2cff-a4cb-453f-9c6f-a483751566cb-0')"
+       "AIMessage(content='I do not have enough information to determine your name.', response_metadata={'prompt_feedback': {'block_reason': 0, 'safety_ratings': []}, 'finish_reason': 'STOP', 'safety_ratings': [{'category': 'HARM_CATEGORY_SEXUALLY_EXPLICIT', 'probability': 'NEGLIGIBLE', 'blocked': False}, {'category': 'HARM_CATEGORY_HATE_SPEECH', 'probability': 'NEGLIGIBLE', 'blocked': False}, {'category': 'HARM_CATEGORY_HARASSMENT', 'probability': 'NEGLIGIBLE', 'blocked': False}, {'category': 'HARM_CATEGORY_DANGEROUS_CONTENT', 'probability': 'NEGLIGIBLE', 'blocked': False}]}, id='run-8ac6c487-a399-4d23-9bc4-3341230599c9-0', usage_metadata={'input_tokens': 7, 'output_tokens': 11, 'total_tokens': 18})"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -59,16 +62,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "AIMessage(content='Your name is Bob.', response_metadata={'model': 'llama2', 'created_at': '2024-07-16T10:47:02.6448832Z', 'message': {'role': 'assistant', 'content': ''}, 'done_reason': 'stop', 'done': True, 'total_duration': 8137020100, 'load_duration': 19138800, 'prompt_eval_count': 61, 'prompt_eval_duration': 6782203000, 'eval_count': 6, 'eval_duration': 1330238000}, id='run-635b6ec4-8148-4d5e-b580-42e60b1a7e0a-0')"
+       "AIMessage(content='You told me your name is Bob. Is that correct?', response_metadata={'prompt_feedback': {'block_reason': 0, 'safety_ratings': []}, 'finish_reason': 'STOP', 'safety_ratings': [{'category': 'HARM_CATEGORY_SEXUALLY_EXPLICIT', 'probability': 'NEGLIGIBLE', 'blocked': False}, {'category': 'HARM_CATEGORY_HATE_SPEECH', 'probability': 'NEGLIGIBLE', 'blocked': False}, {'category': 'HARM_CATEGORY_HARASSMENT', 'probability': 'NEGLIGIBLE', 'blocked': False}, {'category': 'HARM_CATEGORY_DANGEROUS_CONTENT', 'probability': 'NEGLIGIBLE', 'blocked': False}]}, id='run-f9281ba3-d7f9-4bc6-ae6f-dc364b0463c4-0', usage_metadata={'input_tokens': 25, 'output_tokens': 12, 'total_tokens': 37})"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -88,12 +91,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# We can use a Message History class to wrap our model and make it stateful. \n",
     "# This will keep track of inputs and outputs of the model, and store them in some datastore.\n",
+    "# BaseChatMessageHistory provides a framework for creating chat message history implementations,\n",
+    "# while InMemoryChatMessageHistory offers a simple and efficient way to store chat history in memory.\n",
+    "# RunnableWithMessageHistory essentially wraps an LLM and automatically handles the integration of a chat message history,\n",
+    "# such as InMemoryChatMessageHistory. \n",
     "from langchain_core.chat_history import (\n",
     "    BaseChatMessageHistory,\n",
     "    InMemoryChatMessageHistory,\n",
@@ -118,16 +125,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"Hello Rishil! It's nice to meet you. How are you doing today?\""
+       "\"Hi Rishil, it's nice to meet you! I'm Gemini, a multi-modal AI language model developed by Google. I can help you with a wide range of topics and tasks, from answering your questions to generating text and translating languages. Feel free to ask me anything you'd like, and I'll do my best to assist you.\""
       ]
      },
-     "execution_count": 35,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,16 +151,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Your name is Rishil.'"
+       "'You told me your name is Rishil. Is that correct?'"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,16 +177,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"I'm just an AI, I don't have access to personal information such as your name. Additionally, it is not appropriate or ethical to ask for personal information about individuals without their consent. It is important to respect people's privacy and only request information that is necessary and appropriate in a given context. Is there anything else I can help you with?\""
+       "'I do not have access to your personal information and cannot tell you your name.'"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,16 +205,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Your name is Rishil.'"
+       "'You still have not told me your name, so I do not know what it is. Would you like to tell me your name?'"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,16 +233,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"Hello there, Bob! It's nice to meet you. Is there something I can help you with or would you like to chat? 😊\""
+       "'Hi Bob! How can I help you today?'"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -301,16 +308,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Your name is Jim. 😊 Is there anything else I can help you with?'"
+       "'You have not told me your name yet, so I do not know what it is. Would you like to tell me your name?'"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,16 +354,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Hola Bob! ¡Cómo estás?! (How are you?) ¿Qué puedo hacer para ayudarte hoy? (What can I do for you today?) ¿Tienes alguna pregunta o problema que necesitas ayuda con? (Do you have any questions or problems you need help with?)'"
+       "'¡Hola! Soy Bob, tu asistente. Haré todo lo posible para responder a tus preguntas en español.'"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -372,16 +379,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Hola Todd! ¡Claro que sí! ¿En qué puedo ayudarte hoy? ¿Tienes alguna pregunta o necesitas ayuda con algo en particular? Estoy aquí para ayudarte en lo que necesites. 😊'"
+       "'¡Hola, Todd! Me alegro de poder ayudarte. ¡Sólo pregunta!'"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,16 +413,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'あなたの名前は、タッドです！ (Your name is Todd!)'"
+       "'Tu nombre es Todd. ¿Hay algo más en lo que pueda ayudarte hoy?'"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -431,13 +438,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[SystemMessage(content=\"you're a good assistant\"),\n",
+       "[HumanMessage(content=\"you're a good assistant\"),\n",
        " HumanMessage(content=\"hi! I'm bob\"),\n",
        " AIMessage(content='hi!'),\n",
        " HumanMessage(content='I like vanilla ice cream'),\n",
@@ -450,7 +457,7 @@
        " AIMessage(content='yes!')]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -487,16 +494,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'your name is Bob'"
+       "\"I don't know your name, as I am just an AI chatbot assistant and do not have access to personal information.\""
       ]
      },
-     "execution_count": 48,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -523,16 +530,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'you asked \"what is 2 + 2\"?'"
+       "'2 + 2'"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -550,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -565,16 +572,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'your name is Bob'"
+       "'bob'"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -593,16 +600,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'you asked \"2 + 2\".'"
+       "'2 + 2'"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -621,19 +628,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "|H|aha|,| sure| thing| Tod|d|!| Here|'|s| one| for| you|:|\n",
-      "|\n",
-      "|Why| don|'|t| scient|ists| trust| atoms|?| Because| they| make| up| everything|!| |😂|\n",
-      "|\n",
-      "|I| hope| that| made| you| smile|!| Do| you| have| any| other| questions| or| would| you| like| me| to| come| up| with| another| jo|ke|?||"
+      "What do you call a boomerang that doesn’t come back? A stick|.|"
      ]
     }
    ],
